# tennis-stat-scraper

./: .gitignore  README.md  pyproject.toml  setup.cfg
stat_scraper/: champ_urls_parser.py  events_urls_parser.py  sample_parser.py  utils.py
stat_scraper/scripts/: scraper.py
stat_scraper/urls/: atp_champs_by_years_urls.txt  atp_events_urls.txt  wta_champs_by_years_urls.txt  wta_events_urls.txt
tests/: test_tennis_stat_scraper.py
