[tool.poetry]
name = "tennis-stat-scraper"
version = "0.1.0"
description = ""
authors = ["Max <maksim.perepelyuk@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
beautifulsoup4 = "^4.9.3"
lxml = "^4.5.2"
tqdm = "^4.50.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
